[package]
name = "portscan"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
panic = "abort"
strip = "symbols"
lto = "fat"
codegen-units=1
debug-assertions = true
overflow-checks = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
