[package]
name = "portscan"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
panic = "abort"
strip = "symbols"
lto = "fat"
codegen-units=1
debug-assertions = true
overflow-checks = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.11"
terminal-menu = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version="1.0.108" }
json = "0.12"
reqwest ={ version="0.11.12"  ,default-features = false, features = [ "json","rustls-tls"]}
tokio = { version = "1", features = ["full"] }
